...
    return Padding(
      padding: EdgeInsets.symmetric(vertical: 10),
      child: Column(
        children: [
          ListTile(
            leading: Icon(Icons.person),
            title: Text('My public page'),
            onTap: () {
              Get.toNamed(AppRoutes.userProfile,
                  arguments: userStore.customerProfilesDetails);
            },
          ),
          // ...更多ListTile组件
...
