...
                       onTap: () async {
                         Map<String, dynamic>? customerProfilesDetails =  await controller.getProfile(message.userID!);
                         Get.toNamed(AppRoutes.userProfile,
                             arguments: customerProfilesDetails);
                       },
                       child: CircleAvatar(
                         key: const Key('userProfileAvatar'),
                         backgroundImage: NetworkImage(avatar),
                         radius: 20,
                       ),
                     ),
                   ),
                 Expanded(
...
