...
    UserStore userStore = Get.find<UserStore>();
    return Scaffold(
        appBar: AppBar(
          title: const Text("Home Page"),
          actions: [
            IconButton(
              key: ValueKey('searchIconButton'),
              icon: const Icon(Icons.search),
              onPressed: () {
                // Assuming SearchMain is the route name for your search screen
                Get.toNamed(AppRoutes.SearchMain);
              },
            ),
...
